# maat-scripts

./: .gitignore  Makefile  setup.cfg
maat_scripts/: main.py
merge/: main.py  merge_comp_freqs.py
