[metadata]
name = maat-scripts
author = Adam Tornhill
author-email = ?@?
maintainer = Kristoffer Andersson
maintainer-email = kod.kristoff@gmail.com
summary = Code maat scriptd.
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/spraakbanken/json-streams-py
project_urls =
    Bug Tracker = https://github.com/spraakbanken/json-streams-py/issues
    Documentation = https://github.com/spraakbanken/json-streams-py
    Source Code = https://github.com/spraakbanken/json-streams-py
license = MIT
classifier =
	# Development Status :: 2 - Pre-Alpha
	Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    # Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    # uncomment if you test on these interpreters:
    # Programming Language :: Python :: Implementation :: IronPython
    # Programming Language :: Python :: Implementation :: Jython
    # Programming Language :: Python :: Implementation :: Stackless
    Topic :: Utilities

[files]
packages =
    maat_scripts
    merge
    miner
    transform

[entry_points]
console_scripts =
    maat-scripts = maat_scripts.main:app
maat.scripts =
    merge = merge.main

[extras]
dev =
    pytest
    pytest-cov
    flake8
    black
    isort
    reno
    pylint
    bump2version
ujson =
    ujson
orjson =
    orjson

[tool:flake8]
max-line-length = 97

[tool:pytest]
junit_family=xunit1
